CORE-6521: Fixing thumbnail image arrow alignment issue on tab.

--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/cloudzoom/_cloudzoom.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/cloudzoom/_cloudzoom.scss
@@ -280,7 +280,7 @@
   #product-image-gallery,
   #lightSlider {
     position: relative;
-    height: 6.25rem;
+    height: auto;
     margin: 0 auto;
     padding-#{$left}: 0;
 
